chore: git alias delete-merged-branches

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,30 +3,31 @@
 [interactive]
   diffFilter = delta --color-only
 [delta]
-    navigate = true    # use n and N to move between diff sections
-    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+  navigate = true    # use n and N to move between diff sections
+  light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
 
 [merge]
-    conflictstyle = diff3
+  conflictstyle = diff3
 
 [diff]
-    colorMoved = default
+  colorMoved = default
 [alias]
 	tree = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 	t = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 	ta = log --graph  --all --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	unstage = reset HEAD --
+  unstage = reset HEAD --
+  delete-merged-branches = !git branch --merged | egrep -v '\\*|develop|dev|main|master|stage|staging' | xargs git branch -d
 [gui]
 	encoding = utf-8
 [color]
-    ui = auto
+  ui = auto
 [user]
 	name = Yuki Matsushita
 	email = katsumeshi@gmail.com
 [github]
 	user = katsumeshi
 [pull]
-    rebase = true
+  rebase = true
 [rebase]
   autosquash = true
 
