--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,10 +42,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @continuum-restore 'on'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+
 
 run '~/.tmux/plugins/tpm/tpm'
