--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -18,23 +18,19 @@ TERM = "alacritty"
 size = 13.0
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
-# family = "FiraCode Nerd Font Mono"
+family = "FiraCode Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrainsMono Nerd Font"
-# family = "FiraCode Nerd Font Mono"
+family = "FiraCode Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font"
-# family = "FiraCode Nerd Font Mono"
+family = "FiraCode Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
-# family = "FiraCode Nerd Font Mono"
+family = "FiraCode Nerd Font"
 style = "Regular"
 
 # [[keyboard.bindings]]
