--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["/Users/katsumeshi/.config/alacritty/catppuccin/catppuccin-mocha.toml"]
+import = ["./tokyonight/tokyonight_storm.toml"]
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -15,22 +15,26 @@ shape = "Block"
 TERM = "alacritty"
 
 [font]
-size = 13.0
+size = 12.0
 
 [font.bold]
-family = "FiraCode Nerd Font"
+# family = "FiraCode Nerd Font"
+family = "Hack Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "FiraCode Nerd Font"
+# family = "FiraCode Nerd Font"
+family = "Hack Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "FiraCode Nerd Font"
+# family = "FiraCode Nerd Font"
+family = "Hack Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "FiraCode Nerd Font"
+# family = "FiraCode Nerd Font"
+family = "Hack Nerd Font"
 style = "Regular"
 
 # [[keyboard.bindings]]
