--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["./tokyonight/tokyonight_storm.toml"]
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -428,3 +427,6 @@ lines = 50
 [window.padding]
 x = 5
 y = 5
+
+[general]
+import = ["./tokyonight/tokyonight_storm.toml"]
